<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/icon"
    >
    <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/linearLayout1">

        <Button
            android:id="@+id/write_tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/lightBlue"
            android:text="@string/write_to_tag" >
</Button>
    </LinearLayout>

<EditText
    android:id="@+id/note"
    android:hint="@string/hint"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:textColor="@color/white"
    android:gravity="top"
    android:text="@string/default_note_text" >
</EditText>

<Button
    android:id="@+id/button1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textColor="@color/blue"
    android:onClick="wifiOn"
    android:text="@string/WifiOn" />

<Button
    android:id="@+id/button2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textColor="@color/blue"
    android:onClick="wifiOff"
    android:text="@string/WifiOff" />

<Button
    android:id="@+id/button3"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textColor="@color/blue"
    android:onClick="bluetoothOn"
    android:text="@string/BluetoothOn" />

<Button
    android:id="@+id/button4"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textColor="@color/blue"
    android:onClick="bluetoothOff"
    android:text="@string/BluetoothOff" />

</LinearLayout>
